k8s/mediaserver/_kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita-service
  namespace: mediaserver
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.100.232
spec:
  type: LoadBalancer
  selector:
    app: kavita
  ports:
    - port: 5000
