k8s/mediaserver/_kavita/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita
  namespace: mediaserver
spec:
  rules:
    - host: "kavita.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kavita-service
                port:
                  number: 5000
